<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) The CyanogenMod Project
     Copyright (C) The OmiROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingBottom="20dip">

        <TextView android:id="@+id/vibration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibration_title"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <TextView android:id="@+id/vibration_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingTop="10dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />
        <SeekBar android:id="@+id/vibration_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vibration_text"
                android:paddingTop="2dip"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_below="@+id/vibration_seekbar"
                android:paddingTop="5dip" >

            <Button android:id="@+id/vibration_test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vibration_test_title"
                    android:width="100dp" />

            <Button android:id="@+id/vibration_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_reset_title"
                    android:width="100dp" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
